samples/_failures_safe/1761287437_decab7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8847683.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_f8847683.c:158:12: error: missing terminating " character
  158 |     printf("Short
      |            ^~~~~~
./samples/SAFE/__tmp_f8847683.c:158:5: error: expected expression at end of input
  158 |     printf("Short
      |     ^~~~~~
./samples/SAFE/__tmp_f8847683.c:158:5: error: expected declaration or statement at end of input
